--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-
+scr
 * {
     margin: 0;
     padding: 0;
@@ -52,9 +52,7 @@ a:hover {
 }
 .logo1{
     border-radius: 50%;
-    overflow: hidden;
-    width: 250px;
-    height: 200pxpx;
+    height: 170px;
     transition: all 300ms ease-in-out;
 }
 .logo1:hover{
@@ -398,15 +396,7 @@ article .icon {
 }
 
 /* Footer section */
-footer {
-    height: 26vh;
-    margin: 0 1rem;
-}
 
 footer p {
     text-align: center;
 }
-
-
-
-
